--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "A shared blog",
   "scripts": {
     "css:concat": "cat src/assets/styles/_font.css src/assets/styles/_tailwind.css src/assets/styles/_custom.css > src/assets/styles/build/bundle.css",
-    "css:postcss-dev": "npx postcss src/assets/styles/build/bundle.css -o src/assets/styles/build/style.css --env development",
-    "css:postcss-prod": "npx postcss src/assets/styles/build/bundle.css -o src/assets/styles/build/style.css --env production",
+    "css:postcss-dev": "npx postcss src/assets/styles/app.css -o src/assets/styles/build/style.css --env development",
     "css:minify": "npx cleancss src/assets/styles/build/style.css -o src/assets/styles/style.min.css",
-    "build-dev:css": "npm run css:concat && npm run css:postcss-dev && cp src/assets/styles/build/style.css src/assets/styles/style.min.css",
-    "build-prod:css": "npm run css:concat && npm run css:postcss-prod && npm run css:minify",
+    "build-dev:css": "npm run css:postcss-dev && cp src/assets/styles/build/style.css src/assets/styles/style.min.css",
     "start": "npx @11ty/eleventy",
-    "serve": "npx @11ty/eleventy --serve", 
+    "serve": "npx @11ty/eleventy --serve",
     "lint:markdown": "markdownlint src/**/*.md"
   },
   "repository": {
