Add syntax highlighting

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "homepage": "https://github.com/JanDW/wildpeaches#readme",
   "devDependencies": {
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@iktakahiro/markdown-it-katex": "^4.0.0",
     "autoprefixer": "^9.8.6",
