--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "markdown-it-attrs": "^3.0.3",
     "markdown-it-footnote": "^3.0.2",
     "markdownlint-cli": "^0.23.2",
+    "moment": "^2.27.0",
     "postcss-cli": "^7.1.1",
     "postcss-custom-selectors": "^5.1.2",
     "postcss-easy-import": "^3.0.0",
