--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "markdown-it": "^11.0.0",
     "markdown-it-attrs": "^3.0.3",
     "markdown-it-footnote": "^3.0.2",
+    "markdown-it-image-lazy-loading": "^1.0.2",
     "markdownlint-cli": "^0.23.2",
     "moment": "^2.27.0",
     "postcss-cli": "^7.1.1",
