--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "markdown-it": "^11.0.0",
+    "markdown-it-anchor": "^6.0.0",
     "markdown-it-attrs": "^3.0.3",
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-image-lazy-loading": "^1.0.2",
