--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
+    "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@iktakahiro/markdown-it-katex": "^4.0.1",
     "clean-css-cli": "^4.3.0",
     "csscomb": "^4.3.0",
