--- a/package.json
+++ b/package.json
@@ -43,18 +43,20 @@
   "homepage": "https://github.com/JanDW/wildpeaches#readme",
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "@iktakahiro/markdown-it-katex": "^4.0.1",
     "clean-css-cli": "^4.3.0",
     "csscomb": "^4.3.0",
     "cssnano": "^4.1.10",
+    "dotenv": "^8.2.0",
     "markdown-it": "^12.0.2",
     "markdown-it-anchor": "^6.0.1",
     "markdown-it-attrs": "^3.0.3",
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-image-lazy-loading": "^1.0.2",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "postcss": "^8.1.14",
     "postcss-cli": "^8.3.0",
     "postcss-custom-selectors": "^5.1.2",
