Social sharing metadata tweaking (#88)
* Social sharing metadata tweaking

* Add dump 11ty filter

* Add socialImg to applicable posts

* Use ndash instead of hypen for pageTitle

* Slack does not pick up on SVG in socialImg

* Optimised images with calibre/image-actions

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "@iktakahiro/markdown-it-katex": "^4.0.1",
+    "@jamshop/eleventy-filter-dump": "^1.0.2",
     "clean-css-cli": "^4.3.0",
     "csscomb": "^4.3.0",
     "cssnano": "^4.1.10",
