--- a/package.json
+++ b/package.json
@@ -23,18 +23,8 @@
     }
   },
   "lint-staged": {
-    "*.{html,json}": [
-      "prettier --write",
-      "git add -A"
-    ],
-    "scripts/**/*.{js,json}": [
-      "prettier --write",
-      "git add -A"
-    ],
-    "styles/**/*.css": [
-      "csscomb --tty-mode --",
-      "git add -A"
-    ]
+    "**/*.{js,json,css,md,yml,yaml}": "prettier --write",
+    "**/*.js": "eslint --cache --fix"
   },
   "keywords": [],
   "author": "Jan De Wilde",
@@ -66,12 +56,19 @@
     "postcss-custom-selectors": "^6.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^3.0.0",
+    "postcss-logical": "^4.0.2",
+    "postcss-media-minmax": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "http-server": "^0.12.3",
-    "husky": "^5.1.1",
+    "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "markdownlint-cli": "^0.26.0",
     "prettier": "2.2.1"
