--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "csscomb": "^4.3.0",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
+    "escape-string-regexp": "^1.0.5",
     "markdown-it": "^12.0.4",
     "markdown-it-anchor": "^7.0.2",
     "markdown-it-attrs": "^4.0.0",
@@ -59,6 +60,7 @@
     "postcss-logical": "^4.0.2",
     "postcss-media-minmax": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
+    "slugify": "^1.5.0",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
