--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "css:postcss-dev": "npx postcss src/assets/styles/app.css -o tmp/style.css --env development",
     "css:postcss-prod": "npx postcss src/assets/styles/app.css -o tmp/style.css --env production",
     "css:minify": "npx cleancss tmp/style.css -o src/assets/styles/style.min.css",
-    "css:build-dev": "npm run css:postcss-dev && cp tmp/style.css src/assets/styles/style.min.css",
+    "css:build-dev": "npm run css:postcss-dev && ncp tmp/style.css src/assets/styles/style.min.css",
     "css:build-prod": "NODE_ENV=production && ELEVENTY_PRODUCTION=true && npm run css:postcss-prod && npm run css:minify",
     "start": "npm run css:build-prod && npx @11ty/eleventy",
     "serve": "npm run css:build-dev && npx @11ty/eleventy --serve",
@@ -50,6 +50,7 @@
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-image-lazy-loading": "^1.0.2",
     "moment": "^2.29.1",
+    "ncp": "^2.0.0",
     "node-fetch": "^2.6.1",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
