--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "npm run css:build-prod && npx @11ty/eleventy",
     "serve": "npm run css:build-dev && npx @11ty/eleventy --serve",
     "md:lint": "markdownlint src/**/*.md",
-    "rm:www": "rm -rf www/"
+    "rm:www": "rimraf www/"
   },
   "husky": {
     "hooks": {
@@ -43,7 +43,7 @@
     "csscomb": "^4.3.0",
     "cssnano": "^5.0.4",
     "dotenv": "^10.0.0",
-    "escape-string-regexp": "^5.0.0",
+    "escape-string-regexp": "^4.0.0",
     "markdown-it": "^12.0.6",
     "markdown-it-anchor": "^7.1.0",
     "markdown-it-attrs": "^4.0.0",
@@ -57,10 +57,11 @@
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-selectors": "^6.0.0",
     "postcss-easy-import": "^3.0.0",
-    "postcss-extend-rule": "^3.0.0",
-    "postcss-logical": "^4.0.2",
+    "postcss-extend-rule": "^2.0.0",
+    "postcss-logical": "^1.1.1",
     "postcss-media-minmax": "^5.0.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^5.3.0",
+    "rimraf": "^2.7.1",
     "slugify": "^1.5.3",
     "tailwindcss": "^2.1.2"
   },
