Valid package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wildpeaches.xyz",
+  "name": "wild-peaches",
   "version": "0.0.1",
   "description": "A blog about mind-sized STEM ideas and experiments",
   "repository": {
