--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "type": "git",
     "url": "git+https://github.com/JanDW/wildpeaches.git"
   },
+  "resolutions": {
+    "ansi-html": "https://registry.npmjs.org/ansi-html-community/-/ansi-html-community-0.0.8.tgz"
+  },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "css:postcss-dev": "npx postcss src/assets/styles/app.css -o tmp/style.css --env development",
     "css:postcss-prod": "npx postcss src/assets/styles/app.css -o tmp/style.css --env production",
     "css:minify": "npx cleancss tmp/style.css -o src/assets/styles/style.min.css",
@@ -34,48 +38,48 @@
   },
   "homepage": "https://github.com/JanDW/wildpeaches#readme",
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "@11ty/eleventy-plugin-rss": "^1.1.1",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
+    "@11ty/eleventy": "^1.0.0-beta.8",
+    "@11ty/eleventy-plugin-rss": "^1.1.2",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "@iktakahiro/markdown-it-katex": "^4.0.1",
     "@jamshop/eleventy-filter-dump": "^1.0.4",
-    "clean-css-cli": "^5.3.3",
-    "cssnano": "^5.0.7",
+    "clean-css-cli": "^5.4.2",
+    "cssnano": "^5.0.11",
     "dotenv": "^10.0.0",
     "escape-string-regexp": "^4.0.0",
     "markdown-it": "^12.2.0",
-    "markdown-it-anchor": "^8.1.2",
-    "markdown-it-attrs": "^4.0.0",
+    "markdown-it-anchor": "^8.4.1",
+    "markdown-it-attrs": "^4.1.0",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-image-lazy-loading": "^1.1.0",
     "moment": "^2.29.1",
     "ncp": "^2.0.0",
-    "node-fetch": "^2.6.1",
-    "postcss": "^8.3.6",
-    "postcss-cli": "^8.3.1",
+    "node-fetch": "^3.1.0",
+    "postcss": "^8.4.1",
+    "postcss-cli": "^9.0.2",
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-selectors": "^6.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^3.0.0",
-    "postcss-logical": "^4.0.2",
+    "postcss-logical": "^5.0.0",
     "postcss-media-minmax": "^5.0.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^7.0.1",
     "prism-themes": "^1.9.0",
     "rimraf": "^3.0.2",
-    "slugify": "^1.6.0",
-    "tailwindcss": "^2.2.7"
+    "slugify": "^1.6.3",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "http-server": "^13.0.0",
-    "husky": "^7.0.1",
-    "lint-staged": "^11.1.2",
-    "markdownlint-cli": "^0.28.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "http-server": "^14.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
+    "markdownlint-cli": "^0.30.0",
     "markdownlint-rule-titlecase": "^0.1.0",
-    "prettier": "2.3.2"
+    "prettier": "2.5.0"
   }
 }
