--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "lint-staged": "^11.1.2",
     "markdownlint-cli": "^0.28.1",
     "markdownlint-rule-titlecase": "^0.1.0",
-    "prettier": "2.3.2"
+    "prettier": "2.3.2",
+    "prettier-plugin-tailwindcss": "^0.1.7"
   }
 }
